fix for mis aligning of div when error text is added

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,9 @@
   width: 150px;
 }
 
-
+#errorMsg{
+  display: inline-block;
+}
 @media (max-width: 575.98px) { 
   .formblock {
 width: 65%;
